authentik/20-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentik-server
  namespace: authentik
  labels:
    app.kubernetes.io/name: authentik-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: authentik-server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: authentik-server
    spec:
      priorityClassName: system-cluster-critical
      tolerations:
        - key: "node.kubernetes.io/disk-pressure"
          operator: "Exists"
          effect: "NoSchedule"
      containers:
        - name: authentik-server
          image: ghcr.io/goauthentik/server:2024.12.3
          args:
            - server
          ports:
            - name: http
              containerPort: 9000
              protocol: TCP
            - name: https
              containerPort: 9443
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /-/health/live/
              port: http
            initialDelaySeconds: 60
            periodSeconds: 10
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /-/health/ready/
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 5
          resources:
            requests:
              cpu: 250m
              memory: 1Gi
            limits:
              cpu: "2"
              memory: 2Gi
          volumeMounts:
            - name: media
              mountPath: /media
      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: authentik-media
