authentik/21-worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentik-worker
  namespace: authentik
  labels:
    app.kubernetes.io/name: authentik-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: authentik-worker
  template:
    metadata:
      labels:
        app.kubernetes.io/name: authentik-worker
    spec:
      priorityClassName: system-cluster-critical
      tolerations:
        - key: "node.kubernetes.io/disk-pressure"
          operator: "Exists"
          effect: "NoSchedule"
      containers:
        - name: authentik-worker
          image: ghcr.io/goauthentik/server:2024.12.3
          args: ["worker"]
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 768Mi
          volumeMounts:
            - name: media
              mountPath: /media
      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: authentik-media
