authentik/30-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authentik-server
  namespace: authentik
  labels:
    app.kubernetes.io/name: authentik-server
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
    - name: https
      port: 443
      targetPort: https
      protocol: TCP
  selector:
    app.kubernetes.io/name: authentik-server
